Fix case sensitivity in model
